--- a/sass/media/_images.scss
+++ b/sass/media/_images.scss
@@ -3,8 +3,9 @@ img{
   height: auto;
 }
 
-.logopng {
-  max-width: 90px;
-  height: auto;
-  padding: 15px 15px 5px 15px;
+.site-header h1 img  {
+  max-width: 90px !important;
+  height: auto !important;
+  padding: 15px 15px 5px 15px !important;
 }
+
