--- a/sass/forms/_lable.scss
+++ b/sass/forms/_lable.scss
@@ -3,4 +3,8 @@ input {
     width: 300px;
     height: 4vh;
     margin-top: 1rem;
+
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+    padding: 10px;
 }
