--- a/sass/layout/sections/_top.scss
+++ b/sass/layout/sections/_top.scss
@@ -1,12 +1,32 @@
 .top{
     height: 100vh;
 
+    @media screen and (max-width: 1050px){
+      height: fit-content;
+    }
+
     .sub-section{
         display: grid;
         grid-template-columns: 1.7fr 1fr;
-        padding-top: 100px;
+        padding-top: 80px;
         height: 100vh;
         box-sizing: border-box;
+        @media screen and (max-width: 400px){
+          height: unset;
+        }
+        @media screen and (max-width: 1050px){
+          height: fit-content;
+        }
+
+      @media screen and (max-width: 900px){
+          grid-template-columns: 1fr;
+          grid-template-rows: 1fr 300px;
+
+          .screen-regular{
+            max-width: 200px;
+            margin: auto;
+          }
+        }
 
         .app-info{
           align-self: center;
@@ -39,6 +59,7 @@
 
 
               .cafe{
+                min-width: 150px;
                 width: 15vw;
                 background: white;
                 border: 3px solid $color__orange;
@@ -108,6 +129,9 @@
             &.active{
               opacity: 1;
               bottom: -200px;
+              @media screen and (max-width: 900px){
+                bottom: -100px;
+              }
             }
 
             .screen-box{
