--- a/sass/variables/_colours.scss
+++ b/sass/variables/_colours.scss
@@ -7,6 +7,7 @@ $color_lightgrey:#ccc;
 $color_textBlack:#282828;
 $color_red:#ed1c24;
 $color_yellow:#fbb03b;
+$color__orangedark:#b10909;
 
 
 $color_bs:#7f2707;
